# twitterclone

./: db.sqlite3  pyproject.toml
authentication/: forms.py  urls.py  views.py
authentication/templates/: login.html  signup.html
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py
notification/templates/: notifications.html
tweet/: forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py
tweet/templates/: details.html
twitterclone/: settings.py  urls.py  views.py
twitterclone/templates/: home.html
twitterclone/twitterclone/: settings.py
twitterclone/twitteruser/: admin.py  models.py
twitteruser/: models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20200227_1338.py
twitteruser/templates/: following.html  twitterusers.html
