[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = "MVP replica of Twitter"
authors = ["Jake Hershey <joehershey45@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ipdb = "^0.12.3"
django = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
